...
            ).whenComplete((){
              svl.update();
            });

          },
          color: Colors.deepOrange,
          child: new Text('Create Game Session', style: new TextStyle(color: Colors.white)),
        ),
      ),
    );

    final join_button = new Padding(
        padding: new EdgeInsets.symmetric(vertical: 16.0),
...
                        }
                      }
                    }
                  },
                  color: Colors.deepOrange,
                  child: new Text(
                      'Join Game Session', style: new TextStyle(color: Colors.white)),
                ),
              );
            })
    );


...
